--- a/assets/styles/pages/_review-supliers.scss
+++ b/assets/styles/pages/_review-supliers.scss
@@ -40,3 +40,13 @@
 .govuk-summary-list__row-hide-parent{
     display: none;
 }
+
+.js-step-title-text{
+    color: #007194;
+}
+
+.app-step-nav--large .app-step-nav__toggle-link{
+    font-size: 18px;
+    line-height: 26px;
+    margin-top: 5px;
+}
