--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -7489,6 +7489,14 @@ img {
 .govuk-summary-list__row-hide-parent {
   display: none; }
 
+.js-step-title-text {
+  color: #007194; }
+
+.app-step-nav--large .app-step-nav__toggle-link {
+  font-size: 18px;
+  line-height: 26px;
+  margin-top: 5px; }
+
 /*------------------------------------*\
   #News
 \*------------------------------------*/
@@ -7586,7 +7594,7 @@ a.skip-main:focus {
   margin-bottom: 2.5rem; }
 
 .govuk-main-wrapper {
-  padding-top: 1.75rem;
+  padding-top: 1.5625rem;
   padding-bottom: 3.75rem; }
 
 .govuk-button {
@@ -7616,6 +7624,9 @@ a.skip-main:focus {
   margin-top: 25px;
   margin-bottom: 40px; }
 
+.govuk-body-m, .wp-caption-text {
+  margin-bottom: 1.5625rem; }
+
 .govuk-body p:last-child, .wp-caption-text p:last-child {
   margin-bottom: 0px; }
 
@@ -7625,9 +7636,6 @@ a.skip-main:focus {
 .app-step-nav__button--controls {
   padding-bottom: 1.5625rem; }
 
-.govuk-body-m, .govuk-body, .wp-caption-text, .wp-caption-text, p {
-  margin-bottom: 1.5625rem; }
-
 .cat-dist-bottom-28 {
   margin-bottom: 1.75rem; }
 
@@ -7636,3 +7644,9 @@ a.skip-main:focus {
 
 .cat-bottom-dist-0 {
   margin-bottom: 0px; }
+
+#step-by-step-navigation {
+  margin-bottom: 0px; }
+
+.app-step-nav__step:last-child .app-step-nav__header {
+  border-bottom: 1px solid #bfc1c3; }
